--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask>=0.8
 folium>=0.2.1
 gunicorn>=19.4.5
 markdown>=2.6.7
-pandas >= 0.0
+#pandas >= 0.0
 pymysql >= 0.0
 rdflib>=4.2.2
 rdflib-jsonld >= 0.0
